--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       up at the root with no options left, there are no good leaves to be found.
     </p>
     <p>This needs an example.</p>
-    <img src="./Image_root./Image_root.png" />
+    <img src="./Image_root.png" />
     <ol>
       <li>Starting at Root, your options are A and B. You choose A.</li>
       <br />
@@ -533,22 +533,22 @@
 
 <table border="1" align="center" bgcolor="grey" cellpadding="8px">
   <tr>
-      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
+      <td><img src="./black-ball.png" alt="black-ball"></td>
+      <td><img src="./black-ball.png" alt="black-ball"></td>
       <td width="45px"></td>
-      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
-      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
+      <td><img src="./white-ball.png" alt="white-ball"></td>
+      <td><img src="./white-ball.png" alt="white-ball"></td>
   </tr>
 </table>
 <p>The goal is to reverse the positions of the marbles:</p>
 
 <table border="1" align="center" bgcolor="grey" cellpadding="8px">
   <tr>
-      <td><img src="./white-ball/white-ball.png" alt="black-ball"></td>
-      <td><img src="./white-ball/white-ball.png" alt="black-ball"></td>
+      <td><img src="./white-ball.png" alt="black-ball"></td>
+      <td><img src="./white-ball.png" alt="black-ball"></td>
       <td width="45px"></td>
-      <td><img src="./black-ball/black-ball.png" alt="white-ball"></td>
-      <td><img src="./black-ball/black-ball.png" alt="white-ball"></td>
+      <td><img src="./black-ball.png" alt="white-ball"></td>
+      <td><img src="./black-ball.png" alt="white-ball"></td>
   </tr>
 </table>
 <p>The black marbles can only move to the right, and the white marbles can only move to the left (no backing up). At each move, a marble can either:</p>
@@ -562,11 +562,11 @@
           <td>
               <table border="1" bgcolor="grey" cellpadding="8px">
                   <tr>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
                       <td width="45px"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
                   </tr>
               </table>
           </td>
@@ -577,11 +577,11 @@
           <td>
               <table border="1" bgcolor="grey" cellpadding="8px">
                   <tr>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
                       <td width="45px"></td>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
                   </tr>
               </table>
           </td>
@@ -593,11 +593,11 @@
           <td>
               <table border="1" bgcolor="grey" cellpadding="8px">
                   <tr>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
                       <td width="45px"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
                   </tr>
               </table>
           </td>
@@ -608,11 +608,11 @@
           <td>
               <table border="1" bgcolor="grey" cellpadding="8px">
                   <tr>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
                       <td width="45px"></td>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
                   </tr>
               </table>
           </td>
@@ -624,10 +624,10 @@
               <table border="1" bgcolor="grey" cellpadding="8px">
                   <tr>
                       <td width="45px"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
                   </tr>
               </table>
           </td>
@@ -639,10 +639,10 @@
               <table border="1" bgcolor="grey" cellpadding="8px">
                   <tr>
                       <td width="45px"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-                      <td><img src="./black-ball/black-ball.png" alt="black-ball"></td>
-                      <td><img src="./white-ball/white-ball.png" alt="white-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
+                      <td><img src="./black-ball.png" alt="black-ball"></td>
+                      <td><img src="./white-ball.png" alt="white-ball"></td>
                   </tr>
               </table>
           </td>
