--- a/index.html
+++ b/index.html
@@ -721,6 +721,6 @@
   <br>
   <font color="blue"><i>1.</i></font><b> BLACK BLACK BLACK WHITE  ___ WHITE WHITE</b>
 </p>
-<p><p>Notice that the solution is given in reverse order: BLACK starts out on the left and WHITE on the right, as in the last line. I've added line numbers to the actual output in order to emphasize this point. Backtracking always produces its results (sequence of choices) in reverse order; it is up to you, the programmer, to reverse the results again to get them in the correct order.</p></p>
+<p><b>Notice that the solution is given in reverse order: BLACK starts out on the left and WHITE on the right, as in the last line. I've added line numbers to the actual output in order to emphasize this point. Backtracking always produces its results (sequence of choices) in reverse order; it is up to you, the programmer, to reverse the results again to get them in the correct order.</b></p>
 </body>
 </html>
